--- a/index.html
+++ b/index.html
@@ -1956,7 +1956,8 @@
                                             data-css="tve-u-17e822aedef"><strong><span
                                                     data-css="tve-u-17e822aedf0">Copyright
                                                     ©2022&nbsp;&nbsp;<strong><span
-                                                            data-css="tve-u-17e822aedf4">—&nbsp;</span></strong>dgreatconsultant.com.ng
+                                                            data-css="tve-u-17e822aedf4">—&nbsp;<strong>
+                                                                                                      jonesdigitalhub.com.ng
                                                     —&nbsp;</span></strong></span><strong><span
                                                 data-css="tve-u-17e822aedf6">All Rights Reserved.</span></strong>
                                     </p>
