--- a/index.html
+++ b/index.html
@@ -1577,7 +1577,7 @@
                                         <div class="thrive-colors-palette-config" style="display: none !important">
                                         </div>
 
-                                        <a href="http://bit.do/BillionaireMentor"
+                                        <a href="http://bit.do/billionairementor"
                                             class="tcb-button-link tcb-plain-text tve_evt_manager_listen tve_et_mouseover"
                                             data-tcb-events="__TCB_EVENT_[{&quot;t&quot;:&quot;mouseover&quot;,&quot;config&quot;:{&quot;anim&quot;:&quot;forward&quot;,&quot;loop&quot;:1},&quot;a&quot;:&quot;thrive_animation&quot;}]_TNEVE_BCT__"
                                             style=""><span class="tcb-button-icon">
@@ -1727,7 +1727,7 @@
                                         <div class="thrive-colors-palette-config" style="display: none !important">
                                         </div>
 
-                                        <a href="http://bit.do/BillionaireMentor"
+                                        <a href="http://bit.do/billionairementor"
                                             class="tcb-button-link tcb-plain-text tve_evt_manager_listen tve_et_mouseover"
                                             data-tcb-events="__TCB_EVENT_[{&quot;t&quot;:&quot;mouseover&quot;,&quot;config&quot;:{&quot;anim&quot;:&quot;forward&quot;,&quot;loop&quot;:1},&quot;a&quot;:&quot;thrive_animation&quot;}]_TNEVE_BCT__"
                                             style=""><span class="tcb-button-icon">
@@ -1789,7 +1789,7 @@
                                             <div class="thrive-colors-palette-config" style="display: none !important">
                                             </div>
 
-                                            <a href="http://bit.do/BillionaireMentor"
+                                            <a href="http://bit.do/billionairementor"
                                                 class="tcb-button-link tcb-plain-text tve_evt_manager_listen tve_et_mouseover"
                                                 data-tcb-events="__TCB_EVENT_[{&quot;t&quot;:&quot;mouseover&quot;,&quot;config&quot;:{&quot;anim&quot;:&quot;forward&quot;,&quot;loop&quot;:1},&quot;a&quot;:&quot;thrive_animation&quot;}]_TNEVE_BCT__"
                                                 style=""><span class="tcb-button-icon">
@@ -1910,7 +1910,7 @@
                                         <div class="thrive-colors-palette-config" style="display: none !important">
                                         </div>
 
-                                        <a href="http://bit.do/BillionaireMentor"
+                                        <a href="http://bit.do/billionairementor"
                                             class="tcb-button-link tcb-plain-text tve_evt_manager_listen tve_et_mouseover"
                                             data-tcb-events="__TCB_EVENT_[{&quot;t&quot;:&quot;mouseover&quot;,&quot;config&quot;:{&quot;anim&quot;:&quot;forward&quot;,&quot;loop&quot;:1},&quot;a&quot;:&quot;thrive_animation&quot;}]_TNEVE_BCT__"
                                             style=""><span class="tcb-button-icon">
